welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:3: error: Int does not take parameters
    motif(3) 
         ^