welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {	
  for (motif<-0 to 2){
    motif(3) 
  	recule(21)
  	gauche()
  	avance(7)
  	droite()    
  }
 
  
}


def motif(){
  for (v<-0 to 3){
   	faireV()}
}

def faireV(){
 
  avance()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
  avance()
  baisseBrosse()
	leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  avance()
  gauche()
  avance(7)
  	
 
}